--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-<div style="position: absolute; left: 20px; right: 20px; top: 20px; bottom: 20px;">
-  <div class="well" style="float: left; width: 200px; padding: 8px;">
+<div style="position: absolute; left: 10px; right: 10px; top: 10px; bottom: 10px;">
+  <div class="well" style="float: left; width: 160px; padding: 8px;">
     <ul class="nav nav-list">
       <li class="nav-header">Favorates</li>
       <li class="active"><a href="#"><i class="icon-white icon-home"></i> Home</a></li>
@@ -24,12 +24,20 @@
     </ul>
   </div>
 
-  <div style="float: left; position: absolute; left: 260px; right: 20px; top: 0; bottom: 60px">
+  <div style="float: left; position: absolute; left: 210px; right: 0; top: 0; bottom: 50px">
     <div class="row">
-      toolbar
+      <ul class="breadcrumb">
+        <li>
+          <a href="#">Home</a> <span class="divider">/</span>
+        </li>
+        <li>
+          <a href="#">Library</a> <span class="divider">/</span>
+        </li>
+        <li class="active">Data</li>
+      </ul>
     </div>
-    <div class="well row" style="width: 100%; height: 100%; overflow: auto">
-      <ul id="files"></ul>
+    <div class="row" style="background: #FFF; margin: -5px 1px 0 -19px; height: 100%; overflow: auto">
+      <ul style="margin: 5px;" id="files"></ul>
     </div>
   </div>
 </div>
